<resources>
    <string name="app_name">OpenTripPlanner</string>
    <string name="action_settings">Settings</string>
    <string name="mode">Mode</string>
    <string name="from">From</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="to">To</string>
    <string name="search">Search</string>
    <string name="town">Town</string>
    <string name="coordinates">Coordinates</string>
    <string name="data">Data</string>
    <string name="origin">Origin</string>
    <string name="destination">Destination</string>
    <string name="find_your_way">Find Your Way</string>
    <string name="trip_planner">Trip Planner</string>
</resources>
