<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/stopsCardLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/stopsCardMode"
            style="@style/MainTextLabel"
            android:layout_width="match_parent"
            android:gravity="center"
            android:text="@string/mode" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/stopsCardOrigin"
                    style="@style/MainTextLabel"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/origin" />

                <TextView
                    android:id="@+id/stopsCardFromCoordinates"
                    style="@style/DetailsStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coordinates" />

                <TextView
                    android:id="@+id/stopsCardFromData"
                    style="@style/DetailsStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/stopsCardDestination"
                    style="@style/MainTextLabel"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/destination" />

                <TextView
                    android:id="@+id/stopsCardToCoordinates"
                    style="@style/DetailsStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coordinates" />

                <TextView
                    android:id="@+id/stopsCardToData"
                    style="@style/DetailsStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>